--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
  <!--Main section-->
  <section id="main">
      <div class="main container">
-         <img src="file:///C:/Users/user/Desktop/A/img/a.jpg" width="250px"height="230px">
+         <img src="https://github.com/lydia-atieno/Atis/blob/master/img/a.jpg?raw=true" width="250px"height="230px">
         <div class="icon">&#x1F60E</div>
          <h1>A young Kenyan girl on a journey to self-discovery.</h1>
          <h2>Full Name...</h2>
