--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
              <p>Bondo-Siaya County</p>
              <h2>Hair color...</h2>
              <p>Black</p><br>
-            <img src="file:///C:/Users/user/Desktop/A/img/b.jpg" width="250px"height="240px">
+            <img src="https://github.com/lydia-atieno/Atis/blob/master/img/b.jpg?raw=true" width="250px"height="240px">
         <br> <h2>Describing myself in three words...</h2>
          <p>Friendly, chill, straight-forward
              <h2>Hobbies...</h2>
@@ -71,7 +71,7 @@
              <p>Crisps!</p>
              <h2>Favourite social media apps...</h2>
              <p>YouTube, Instagram, Pinterest</p><br>
-             <img src="file:///C:/Users/user/Desktop/A/img/e.jpg" width="230px" height="300px">
+             <img src="https://github.com/lydia-atieno/Atis/blob/master/img/e.jpg?raw=true" width="230px" height="300px">
              <br><h2>Books I have read...</h2>
              <p>No excuses, the power of habit</p>
              <p>Act like a lady, think like a man</p>
