--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <section id="header">
         <div class="header container">
             <div class="nav-bar">
-                <div class="brand"><h1>Lydia</h1>  <div class="img"><img src="file:///C:/Users/user/Desktop/A/img/f.jpg" width="30" height="20"></div></div>
+                <div class="brand"><h1>Lydia</h1>  <div class="img"><img src="https://github.com/lydia-atieno/Atis/blob/master/img/f.jpg?raw=true" width="30" height="20"></div></div>
                 <div class="nav-list">
                     <div class="menu-btn"><div class="menu-btn_burger"></div></div>
                     
