--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
                     <div class="menu-btn"><div class="menu-btn_burger"></div></div>
                     
                     <ul>
-                        <li><h2>Believe. Achieve.</h2><h4>Instagram: @g.a.w.a.l.a</h4><h4>Email: atienolydia409@gmail.com</h4><div class="img2"><div class="img3"><img src="file:///C:/Users/user/Desktop/A/img/fb.jpg" width="25px" height="23px"></div>
-                        <div class="img4"><img src="file:///C:/Users/user/Desktop/A/img/ig.jpg" width="25px" height="23px"></div>
-                        <div class="img5"><img src="file:///C:/Users/user/Desktop/A/img/twi.jpg" width="25px" height="23px"></div>
+                        <li><h2>Believe. Achieve.</h2><h4>Instagram: @g.a.w.a.l.a</h4><h4>Email: atienolydia409@gmail.com</h4><div class="img2"><div class="img3"><img src="https://github.com/lydia-atieno/Atis/blob/master/img/fb.jpg?raw=true" width="25px" height="23px"></div>
+                        <div class="img4"><img src="https://github.com/lydia-atieno/Atis/blob/master/img/ig.jpg?raw=true" width="25px" height="23px"></div>
+                        <div class="img5"><https://github.com/lydia-atieno/Atis/blob/master/img/twi.jpg?raw=true" width="25px" height="23px"></div>
                     </div>
                     </li>
                         <li><h3>Copyright © 2022 Lydia. All rights reserved</h3></li>
