--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <ul>
                         <li><h2>Believe. Achieve.</h2><h4>Instagram: @g.a.w.a.l.a</h4><h4>Email: atienolydia409@gmail.com</h4><div class="img2"><div class="img3"><img src="https://github.com/lydia-atieno/Atis/blob/master/img/fb.jpg?raw=true" width="25px" height="23px"></div>
                         <div class="img4"><img src="https://github.com/lydia-atieno/Atis/blob/master/img/ig.jpg?raw=true" width="25px" height="23px"></div>
-                        <div class="img5"><https://github.com/lydia-atieno/Atis/blob/master/img/twi.jpg?raw=true" width="25px" height="23px"></div>
+                        <div class="img5"><img src="https://github.com/lydia-atieno/Atis/blob/master/img/twi.jpg?raw=true" width="25px" height="23px"></div>
                     </div>
                     </li>
                         <li><h3>Copyright © 2022 Lydia. All rights reserved</h3></li>
@@ -73,13 +73,13 @@
              <p>YouTube, Instagram, Pinterest</p><br>
              <img src="https://github.com/lydia-atieno/Atis/blob/master/img/e.jpg?raw=true" width="230px" height="300px">
              <br><h2>Books I have read...</h2>
-             <p>No excuses, the power of habit</p>
-             <p>Act like a lady, think like a man</p>
-             <p>Atomic habits</p>
-             <p>The power of the pussy</p>
-             <p>The defining decade (your twenties)</p>
+             <p>No excuses, the power of habit.</p>
+             <p>Act like a lady, think like a man.</p>
+             <p>Atomic habits.</p>
+             <p>The power of the pussy.</p>
+             <p>The defining decade (your twenties).</p>
              <h2>Current read...</h2>
-             <p>The power is within you by Louise L Hay</p>
+             <p>The power is within you by Louise L Hay.</p>
              <h2>Latest discovery...</h2>
              <p>Generational curses are real</p>
              <h2>Motivational quotes/phrases...</h2>
