--- a/index.html
+++ b/index.html
@@ -73,17 +73,17 @@
              <p>YouTube, Instagram, Pinterest</p><br>
              <img src="https://github.com/lydia-atieno/Atis/blob/master/img/e.jpg?raw=true" width="230px" height="300px">
              <br><h2>Books I have read...</h2>
-             <p>No excuses, the power of habit.</p>
+             <div class="pur"><p>No excuses, the power of habit.</p>
              <p>Act like a lady, think like a man.</p>
              <p>Atomic habits.</p>
              <p>The power of the pussy.</p>
-             <p>The defining decade (your twenties).</p>
+                 <p>The defining decade (your twenties).</p></div>
              <h2>Current read...</h2>
              <p>The power is within you by Louise L Hay.</p>
              <h2>Latest discovery...</h2>
              <p>Generational curses are real</p>
              <h2>Motivational quotes/phrases...</h2>
-             <p>If nothing changes, nothing is going to change.</p>
+             <div class="par"><p>If nothing changes, nothing is going to change.</p>
              <p>Talk to yourself in a positive way.</p>
              <p>As you think, so you shall be.</p>
              <p>Mastery requires practice.</p>
@@ -95,7 +95,7 @@
              <p>It's the frequency that makes the differences.</p>
              <p>Be vigilant and far seeing.</p>
              <p>Don't talk about it, be about it.</p>
-             <p>The universe always works in your favour.</p>
+             <p>The universe always works in your favour.</p></div>
              <h2>Mantra...</h2>
              <p>I am capable!</p>
 
