--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
              <h2>Type of music...</h2>
              <p>I listen to any type of music as long as it slaps</p>
              <h2>Favourite food...</h2>
-             <p>Red meat!</p>
+             <p>Meat!</p>
              <h2>Favourite fruits...</h2>
              <p>Watermelon, Avocado</p>
              <h2>Favourite snack...</h2>
