--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
              <p>You can't save time, you can only spend it differently.</p>
              <p>Procastination is the thief of dreams.</p>
              <p>Not making choices is a choice.</p>
-             <p>It's the frequency that makes the differences.</p>
+             <p>It's the frequency that makes the difference.</p>
              <p>Be vigilant and far seeing.</p>
              <p>Don't talk about it, be about it.</p>
              <p>The universe always works in your favour.</p></div>
