--- a/index.html
+++ b/index.html
@@ -79,8 +79,9 @@
              <p>Atomic habits.</p>
              <p>The power of the pussy.</p>
                  <p>The defining decade (your twenties).</p></div>
-             <h2>Current read...</h2>
              <p>The power is within you by Louise L Hay.</p>
+             <h2>Current read...</h2>
+             <p>The subtle art of not giving a fuck.</p>
              <h2>Motivational quotes/phrases...</h2>
              <div class="par"><p>If nothing changes, nothing is going to change.</p>
              <p>Talk to yourself in a positive way.</p>
