--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
              <p>Act like a lady, think like a man.</p>
              <p>Atomic habits.</p>
              <p>The power of the pussy.</p>
-                 <p>The defining decade (your twenties).</p></div>
-             <p>The power is within you by Louise L Hay.</p>
+                 <p>The defining decade (your twenties).</p>
+             <p>The power is within you by Louise L Hay.</p></div>
              <h2>Current read...</h2>
              <p>The subtle art of not giving a fuck.</p>
              <h2>Motivational quotes/phrases...</h2>
