--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
              <p>16<sup>th</sup> September</p>
              <h2>Zodiac sign...</h2>
              <p>Virgo</p>
+             <h2>Gender...</h2>
+             <p>Female</p>
              <h2>Tribe...</h2>
              <p>Luo</p>
              <h2>Religion...</h2>
@@ -56,7 +58,13 @@
              <h2>Home town...</h2>
              <p>Bondo-Siaya County</p>
              <h2>Hair color...</h2>
-             <p>Black</p><br>
+             <p>Black</p>
+             <h2>Lefty or righty...</h2>
+             <p>Righty</p>
+             <h2>Number of piercings...</h2>
+             <p>Two</p>
+             <h2>Languages I speak...</h2>
+             <p>English, Swahili, Dholuo, French</p><br>
             <img src="https://github.com/lydia-atieno/Atis/blob/master/img/b.jpg?raw=true" width="250px"height="240px">
         <br> <h2>Describing myself in three words...</h2>
          <p>Friendly, chill, straight-forward
@@ -64,6 +72,16 @@
              <p>Reading, listening to music, web designing</p>
              <h2>Type of music...</h2>
              <p>I listen to any type of music as long as it slaps</p>
+             <h2>I feel most beautiful when...</h2>
+             <p>My nails are done</p>
+             <h2>Morning or night person...</h2>
+             <p>Morning person</p>
+             <h2>Phobia...</h2>
+             <p>Heights</p>
+             <h2>Pet peeves...</h2>
+             <p>Liars</p>
+             <h2>Longest I've ever gone without taking a shower...</h2>
+             <p>Two days</p>
              <h2>Favourite food...</h2>
              <p>Meat (Liver, chicken, fish)</p>
              <h2>Favourite fruits...</h2>
@@ -71,7 +89,13 @@
              <h2>Favourite snack...</h2>
              <p>Crisps!</p>
              <h2>Favourite social media apps...</h2>
-             <p>YouTube, Instagram, Pinterest</p><br>
+             <p>YouTube, Instagram, Pinterest</p>
+             <h2>If I were an animal, which animal would I be...</h2>
+             <p>A tigress</p>
+             <h2>Biggest regret...</h2>
+             <p>No regrets, just lessons learned.</p>
+             <h2>What brings me peace...</h2>
+             <p>When people I love are doing okay.</p><br>
              <img src="https://github.com/lydia-atieno/Atis/blob/master/img/g.jpg?raw=true" width="230px" height="300px">
              <br><h2>Books I have read...</h2>
              <div class="pur"><p>No excuses, the power of habit.</p>
@@ -82,6 +106,15 @@
              <p>The power is within you by Louise L Hay.</p></div>
              <h2>Current read...</h2>
              <p>The subtle art of not giving a fuck.</p>
+             <h2>Life lessons...</h2>
+             <div class="par">
+                 <p>Nobody owes you anything.</p>
+                <p>Everyone's journey is different.</p>
+                <p>Don't be afraid to outgrow friendships/relationships.</p>
+            <p>We plan but God decides.</p>
+            <p>Live for today, not tomorrow.</p>
+        <p>Focus on what you can control.</p>
+        <p>Love yourself and the rest will follow.</p></div>
              <h2>Motivational quotes/phrases...</h2>
              <div class="par"><p>If nothing changes, nothing is going to change.</p>
              <p>Talk to yourself in a positive way.</p>
