--- a/index.html
+++ b/index.html
@@ -103,10 +103,11 @@
              <p>Atomic habits.</p>
              <p>The power of the pussy.</p>
                  <p>The defining decade (your twenties).</p>
-             <p>The power is within you by Louise L Hay.</p></div>
-             <h2>Current read...</h2>
-             <p>The subtle art of not giving a fuck.</p>
-             <h2>Life lessons...</h2>
+             <p>The power is within you by Louise L Hay.</p>
+            <p>The subtle art of not giving a fuck.</p>
+            <p>Think like a monk.</p>
+            <p>The 5 am club. ETC...</p></div>
+              <h2>Life lessons...</h2>
              <div class="par">
                  <p>Nobody owes you anything.</p>
                 <p>Everyone's journey is different.</p>
@@ -114,9 +115,11 @@
             <p>We plan but God decides.</p>
             <p>Live for today, not tomorrow.</p>
         <p>Focus on what you can control.</p>
-        <p>Love yourself and the rest will follow.</p></div>
+        <p>Love yourself and the rest will follow.</p>
+                 <p>None of us is perfect.</p>
+                 <p>Pain is part of the process.</p></div>
              <h2>Motivational quotes/phrases...</h2>
-             <div class="par"><p>If nothing changes, nothing is going to change.</p>
+             <div class="par"><p>The grass is greener where you water it.</p>
              <p>Talk to yourself in a positive way.</p>
              <p>As you think, so you shall be.</p>
              <p>Mastery requires practice.</p>
