--- a/index.html
+++ b/index.html
@@ -116,7 +116,9 @@
             <p>Live for today, not tomorrow.</p>
         <p>Focus on what you can control.</p>
         <p>Love yourself and the rest will follow.</p>
+                 <p>Only you can be your everything.</p>
                  <p>None of us is perfect.</p>
+                 <p>There's enough for everyone.</p>
                  <p>Pain is part of the process.</p></div>
              <h2>Motivational quotes/phrases...</h2>
              <div class="par"><p>The grass is greener where you water it.</p>
@@ -132,6 +134,29 @@
              <p>Be vigilant and far seeing.</p>
              <p>Don't talk about it, be about it.</p>
              <p>The universe always works in your favour.</p></div>
+         
+            <h2>Bible teachings...</h2>
+            <div class="par">
+                <p>God's greatness is beyond understanding.</p>
+                <p>The wicked will fall into their own traps.</p>
+                <p>Remember the Lord in everything you do.</p>
+                <p>Wisdom will add years to your life.</p>
+                <p>It's the Lord's blessing that makes you wealthy.</p>
+                <p>Those who are good are rewarded here on earth.</p>
+                <p>Keep company with the wise & you will become wise.</p>
+                <p>It is a sin to despise anyone.</p>
+                <p>What you say can preserve or destroy you.</p>
+                <p>Stupid children can bring their parents to ruin.</p>
+                <p>Stay away from people who love to gossip.</p>
+                <p>An honest answer is a sign of true friendship.</p>
+                <p>Curses can not hurt you unless you deserve them.</p>
+                <p>Let others praise you, never do it yourself.</p>
+                <p>Be grateful for every year you live.</p>
+                <p>The Lord will make us prosperous.</p>
+                <p>The righteous will flourish like palm trees.</p>
+                <p>Remember your creator while you are still young.</p>
+                
+            </div>
              <h2>Mantra...</h2>
             <p>I am capable!</p>
 
