--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
              <h2>Favourite food...</h2>
              <p>Meat (Liver, chicken, fish)</p>
              <h2>Favourite fruits...</h2>
-             <p>Watermelon, Avocado</p>
+             <p>Watermelon, Avocado, Grapes</p>
              <h2>Favourite snack...</h2>
              <p>Crisps!</p>
              <h2>Favourite social media apps...</h2>
