--- a/index.html
+++ b/index.html
@@ -86,6 +86,8 @@
              <p>Meat (Liver, chicken, fish)</p>
              <h2>Favourite fruits...</h2>
              <p>Watermelon, Avocado, Grapes</p>
+             <h2>Favourite street food...</h2>
+             <p>Smokies, Samosas</p>
              <h2>Favourite snack...</h2>
              <p>Crisps!</p>
              <h2>Favourite social media apps...</h2>
