--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@
                 <p>The Lord will make us prosperous.</p>
                 <p>The righteous will flourish like palm trees.</p>
                 <p>Remember your creator while you are still young.</p>
+                <p>Pray constantly.</p>
                 
             </div>
              <h2>Mantra...</h2>
