--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                  <p>None of us is perfect.</p>
                  <p>There's enough for everyone.</p>
                  <p>Pain is part of the process.</p></div>
-         <img src="file:///C:/Users/user/Documents/A/img/2.jpg" width="230px" height="215px"><br>
+         <img src="https://github.com/lydia-atieno/Atis/blob/master/img/2.jpg?raw=true" width="230px" height="215px"><br>
              <h2>Motivational quotes/phrases...</h2>
              <div class="par"><p>The grass is greener where you water it.</p>
              <p>Talk to yourself in a positive way.</p>
@@ -156,7 +156,7 @@
                 <p>I matter.</p><br>
 
             </div>
-            <img src="file:///C:/Users/user/Documents/A/img/3.jpg" width="230px" height="245px">
+            <img src="https://github.com/lydia-atieno/Atis/blob/master/img/3.jpg?raw=true" width="230px" height="245px">
          
             <h2>Bible Teachings...</h2>
             <div class="par">
