--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                  <p>Only you can be your everything.</p>
                  <p>None of us is perfect.</p>
                  <p>There's enough for everyone.</p>
-                 <p>Pain is part of the process.</p></div>
+                 <p>Pain is part of the process.</p><br></div>
          <img src="https://github.com/lydia-atieno/Atis/blob/master/img/2.jpg?raw=true" width="230px" height="215px"><br>
              <h2>Motivational quotes/phrases...</h2>
              <div class="par"><p>The grass is greener where you water it.</p>
