--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                  <p>There's enough for everyone.</p>
                  <p>Pain is part of the process.</p><br></div>
          <img src="https://github.com/lydia-atieno/Atis/blob/master/img/2.jpg?raw=true" width="230px" height="215px"><br>
-             <h2>Motivational quotes/phrases...</h2>
+             <h2>Motivational Quotes/Phrases...</h2>
              <div class="par"><p>The grass is greener where you water it.</p>
              <p>Talk to yourself in a positive way.</p>
              <p>As you think, so you shall be.</p>
@@ -156,7 +156,7 @@
                 <p>I matter.</p><br>
 
             </div>
-            <img src="https://github.com/lydia-atieno/Atis/blob/master/img/3.jpg?raw=true" width="230px" height="245px">
+            <img src="https://github.com/lydia-atieno/Atis/blob/master/img/3.jpg?raw=true" width="230px" height="250px">
          
             <h2>Bible Teachings...</h2>
             <div class="par">
