--- a/index.html
+++ b/index.html
@@ -74,11 +74,12 @@
              <p>I listen to any type of music as long as it slaps</p>
              <h2>I feel most beautiful when...</h2>
              <p>My nails are done</p>
+             <p>After taking a shower</p>
              <h2>Morning or night person...</h2>
              <p>Morning person</p>
              <h2>Phobia...</h2>
              <p>Heights</p>
-             <h2>Pet peeves...</h2>
+             <h2>Pet peeve...</h2>
              <p>Liars</p>
              <h2>Longest I've ever gone without taking a shower...</h2>
              <p>Two days</p>
@@ -156,7 +157,7 @@
                 <p>I matter.</p><br>
 
             </div>
-            <img src="https://github.com/lydia-atieno/Atis/blob/master/img/3.jpg?raw=true" width="260px" height="258px">
+            <img src="https://github.com/lydia-atieno/Atis/blob/master/img/3.jpg?raw=true" width="260px" height="260px">
          
             <h2>Bible Teachings...</h2>
             <div class="par">
