--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
              <p>When people I love are doing okay.</p><br>
              <img src="https://github.com/lydia-atieno/Atis/blob/master/img/1.jpg?raw=true" width="230px" height="215px">
              <br><h2>Books I have read...</h2>
-             <div class="pur"><p>No excuses, the power of habit.</p>
+             <div class="pur"><p>No excuses, the power of self-discipline.</p>
              <p>Act like a lady, think like a man.</p>
              <p>Atomic habits.</p>
              <p>The power of the pussy.</p>
