--- a/index.html
+++ b/index.html
@@ -154,7 +154,8 @@
                 <p>I embrace change.</p>
                 <p>I am blessed.</p>
                 <p>I will stay away from negative forces in life.</p>
-                <p>I matter.</p><br>
+                <p>I matter.</p>
+                <p>I am destined for greatness.</p><br>
 
             </div>
             <img src="https://github.com/lydia-atieno/Atis/blob/master/img/3.jpg?raw=true" width="260px" height="260px">
