--- a/index.html
+++ b/index.html
@@ -109,7 +109,8 @@
              <p>The power is within you by Louise L Hay.</p>
             <p>The subtle art of not giving a fuck.</p>
             <p>Think like a monk.</p>
-            <p>The 5 am club. ETC...</p></div>
+            <p>The 5 am club.</p>
+                 <p>Millionaire success habits. ETC</p></div>
               <h2>Life Lessons...</h2>
              <div class="par">
                  <p>Nobody owes you anything.</p>
