--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <p>The subtle art of not giving a fuck.</p>
             <p>Think like a monk.</p>
             <p>The 5 am club.</p>
-                 <p>Millionaire success habits. ETC</p></div>
+                 <p>Millionaire success habits. ETC...</p></div>
               <h2>Life Lessons...</h2>
              <div class="par">
                  <p>Nobody owes you anything.</p>
