--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                 <p>Be grateful for every year you live.</p>
                 <p>The Lord will make us prosperous.</p>
                 <p>The righteous will flourish like palm trees.</p>
-                <p>Remember your creator while you are still young.</p>
+                <p>Remember your Creator while you are still young.</p>
                 <p>Pray constantly.</p>
                 
             </div>
