--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                         <div class="img5"><img src="https://github.com/lydia-atieno/Atis/blob/master/img/twi.jpg?raw=true" width="25px" height="23px"></div>
                     </div>
                     </li>
-                        <li><h3>Copyright © 2022 Lydia. All rights reserved</h3></li>
+                        <li><h3>Copyright © 2022 - 2023 Lydia. All rights reserved</h3></li>
         
                     </ul>
                 </div>
@@ -84,7 +84,7 @@
              <h2>Longest I've ever gone without taking a shower...</h2>
              <p>Two days</p>
              <h2>Favourite food...</h2>
-             <p>Meat (Liver, chicken, fish)</p>
+             <p>Meat (Liver, beef, chicken, fish)</p>
              <h2>Favourite fruits...</h2>
              <p>Watermelon, Avocado, Grapes</p>
              <h2>Favourite street food...</h2>
