--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                 
             </div>
              <h2>Mantra...</h2>
-            <p>I am capable!</p>
+            <p>I am capable of achieving anything I set my mind to!</p>
 
 
             <h3>~ THE END ~</h3>
