--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                 <p>God is light & in Him there is no darkness.</p>
                 <p>The righteous will flourish like palm trees.</p>
                 <p>Remember your Creator while you are still young.</p>
-                <p>Jesus Christ is the same yesterday, today & forever</p>
+                <p>Jesus Christ is the same yesterday, today & for ever.</p>
                 <p>Pray constantly.</p>
                 <p>Give thanks in all circumstances.</p>
                 <p>God's steadfast love & faithfulness endures forever.</p>
