--- a/index.html
+++ b/index.html
@@ -74,7 +74,6 @@
              <p>I listen to any type of music as long as it slaps</p>
              <h2>I feel most beautiful when...</h2>
              <p>My nails are done</p>
-             <p>After taking a shower</p>
              <h2>Morning or night person...</h2>
              <p>Morning person</p>
              <h2>Phobia...</h2>
@@ -168,6 +167,7 @@
                 <p>I am blessed.</p>
                 <p>I will stay away from negative forces in life.</p>
                 <p>I matter.</p>
+                <p>I am a Highly Favoured child of God.</p>
                 <p>I am destined for GREATNESS!!!</p><br>
 
             </div>
